--- a/package.json
+++ b/package.json
@@ -14,21 +14,31 @@
   "dependencies": {},
   "description": "Parse your .FIT files easily, directly from JS.",
   "devDependencies": {
+    "@types/node": "^10.12.1",
+    "awesome-typescript-loader": "^5.2.1",
     "babel": "^6.3.26",
     "babel-core": "^6.4.0",
     "babel-preset-es2015": "^6.3.13",
     "chai": "^3.4.1",
     "del": "^2.2.0",
+    "eslint": "^2.8.0",
+    "eslint-config-airbnb": "^8.0.0",
+    "eslint-plugin-import": "^1.6.1",
     "gulp": "^3.9.0",
     "gulp-babel": "^6.1.1",
     "gulp-jshint": "^2.0.0",
     "gulp-mocha": "^2.2.0",
     "jshint": "^2.9.1",
-    "eslint": "^2.8.0",
-    "eslint-config-airbnb": "^8.0.0",
-    "eslint-plugin-import": "^1.6.1",
     "mocha": "^2.3.4",
-    "run-sequence": "^1.1.5"
+    "run-sequence": "^1.1.5",
+    "source-map-loader": "^0.2.4",
+    "ts": "^0.2.2",
+    "tslint": "^5.11.0",
+    "tslint-loader": "^3.5.4",
+    "typescript": "^3.1.4",
+    "webpack": "^4.23.1",
+    "webpack-cli": "^3.1.2",
+    "webpack-dev-server": "^3.1.10"
   },
   "directories": {},
   "engine": "node >= 0.10.x",
@@ -56,8 +66,11 @@
   },
   "scripts": {
     "example-output": "node_modules/gulp/bin/gulp.js; node examples/example.js examples/example.fit > examples/output.json",
-    "example": "node_modules/gulp/bin/gulp.js; node examples/example.js examples/example.fit",
-    "test": "node_modules/gulp/bin/gulp.js;"
+    "example": "node examples/example.js examples/example.fit",
+    "start": "webpack-dev-server --port 9000 --inline --progress --profile --colors --watch --content-base src/ --mode development",
+    "build": "webpack --config webpack.config.js --mode production",
+    "build.prod": "webpack --config webpack.config.js -p",
+    "test": "karma start karma.config.js"
   },
   "version": "0.0.8"
 }
