--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "author": {
-    "name": "jimmykane"
+    "name": "backfit"
   },
   "bugs": {
-    "url": "https://github.com/jimmykane/fit-parser"
+    "url": "https://github.com/backfit/backfit"
   },
   "contributors": [
     {
@@ -13,25 +13,12 @@
   ],
   "description": "Parse your .FIT files easily, directly from JS (Garmin, Polar, Suunto)",
   "devDependencies": {
-    "babel": "^6.3.26",
-    "babel-core": "^6.4.0",
-    "babel-preset-es2015": "^6.3.13",
-    "chai": "^3.4.1",
-    "del": "^2.2.0",
-    "gulp": "^3.9.0",
-    "gulp-babel": "^6.1.1",
-    "gulp-jshint": "^2.0.0",
-    "gulp-mocha": "^2.2.0",
-    "jshint": "^2.9.1",
-    "eslint": "^2.8.0",
-    "eslint-config-airbnb": "^8.0.0",
-    "eslint-plugin-import": "^1.6.1",
-    "mocha": "^2.3.4",
-    "run-sequence": "^1.1.5"
+    "tslint": "^5.17.0",
+    "typescript": "^3.5.1"
   },
   "directories": {},
   "engine": "node >= 0.10.x",
-  "homepage": "https://github.com/jimmykane/fit-parser",
+  "homepage": "https://github.com/backfit/backfit",
   "keywords": [
     "fit",
     "ant",
@@ -46,18 +33,16 @@
       "name": "Dimitrios Kanellopoulos"
     }
   ],
-  "name": "fit-file-parser",
+  "name": "backfit",
   "optionalDependencies": {},
   "private": false,
   "repository": {
     "type": "git",
-    "url": "git+ssh://git@github.com/jimmykane/fit-parser.git"
+    "url": "git+ssh://github.com/backfit/backfit"
   },
   "scripts": {
-    "example-output": "node_modules/gulp/bin/gulp.js; node examples/example.js examples/example.fit > examples/output.json",
-    "example": "node_modules/gulp/bin/gulp.js; node examples/example.js examples/example.fit",
-    "test": "node_modules/gulp/bin/gulp.js;",
-    "build": "node_modules/gulp/bin/gulp.js babel"
+    "watch": "tsc --watch",
+    "build": "tsc"
   },
   "version": "1.6.7",
   "dependencies": {
