--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "devDependencies": {
     "@babel/core": "^7.4.4",
     "@babel/preset-env": "^7.4.4",
+    "@types/node": "^12.11.1",
     "babel": "^6.3.26",
     "babel-core": "^6.26.3",
     "babel-polyfill": "^6.26.0",
@@ -24,16 +25,20 @@
     "babel-register": "^6.26.0",
     "chai": "^3.4.1",
     "del": "^2.2.0",
-    "eslint": "^2.8.0",
-    "eslint-config-airbnb": "^8.0.0",
-    "eslint-plugin-import": "^1.6.1",
+    "eslint": "^6.1.0",
+    "eslint-config-airbnb": "^18.0.1",
+    "eslint-plugin-import": "^2.18.2",
+    "eslint-plugin-jsx-a11y": "^6.2.3",
+    "eslint-plugin-react": "^7.16.0",
+    "eslint-plugin-react-hooks": "^1.7.0",
     "gulp": "^3.9.1",
     "gulp-babel": "^6.1.3",
-    "gulp-jshint": "^2.1.0",
+    "gulp-eslint": "^6.0.0",
     "gulp-mocha": "^2.2.0",
-    "jshint": "^2.10.2",
+    "gulp-typescript": "^5.0.1",
     "mocha": "^2.3.4",
-    "run-sequence": "^1.1.5"
+    "run-sequence": "^1.1.5",
+    "typescript": "^3.6.4"
   },
   "directories": {},
   "engine": "node >= 0.10.x",
@@ -67,6 +72,8 @@
   },
   "version": "1.6.15",
   "dependencies": {
+    "@typescript-eslint/eslint-plugin": "^2.4.0",
+    "@typescript-eslint/parser": "^2.4.0",
     "buffer": "^5.1.0"
   }
 }
