--- a/package.json
+++ b/package.json
@@ -13,16 +13,16 @@
   ],
   "description": "Parse your .FIT files easily, directly from JS (Garmin, Polar, Suunto)",
   "devDependencies": {
-    "@babel/core": "^7.4.4",
-    "@babel/preset-env": "^7.4.4",
+    "@babel/cli": "^7.2.3",
+    "@babel/core": "^7.4.0",
+    "@babel/plugin-proposal-class-properties": "^7.4.0",
+    "@babel/plugin-proposal-numeric-separator": "^7.2.0",
+    "@babel/plugin-proposal-object-rest-spread": "^7.4.0",
+    "@babel/preset-env": "^7.4.1",
+    "@babel/preset-typescript": "^7.3.3",
     "@types/node": "^12.11.1",
-    "babel": "^6.3.26",
-    "babel-core": "^6.26.3",
-    "babel-polyfill": "^6.26.0",
-    "babel-preset-env": "^1.7.0",
-    "babel-preset-es2015": "^6.24.1",
-    "babel-preset-stage-2": "^6.24.1",
-    "babel-register": "^6.26.0",
+    "core-js": "^3.3.2",
+    "regenerator-runtime": "^0.13.3",
     "chai": "^3.4.1",
     "del": "^2.2.0",
     "eslint": "^6.1.0",
@@ -31,14 +31,9 @@
     "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-react": "^7.16.0",
     "eslint-plugin-react-hooks": "^1.7.0",
-    "gulp": "^3.9.1",
-    "gulp-babel": "^6.1.3",
-    "gulp-eslint": "^6.0.0",
-    "gulp-mocha": "^2.2.0",
-    "gulp-typescript": "^5.0.1",
     "mocha": "^2.3.4",
     "run-sequence": "^1.1.5",
-    "typescript": "^3.6.4"
+    "typescript": "^3.3.3"
   },
   "directories": {},
   "engine": "node >= 0.10.x",
@@ -65,10 +60,15 @@
     "url": "git+ssh://git@github.com/jimmykane/fit-parser.git"
   },
   "scripts": {
-    "example-output": "node_modules/gulp/bin/gulp.js; node examples/example.js examples/example.fit > examples/output.json",
-    "example": "node_modules/gulp/bin/gulp.js; node examples/example.js examples/example.fit",
+    "build": "npm run build:types && npm run build:js",
+    "build:types": "tsc --emitDeclarationOnly",
+    "build:js": "babel src --out-dir lib --extensions \".ts,.tsx\" --source-maps inline",
+    "type-check": "tsc --noEmit",
+    "type-check:watch": "npm run type-check -- --watch",
+    "example-output": "npm run build:js; node examples/example.js examples/example.fit > examples/output.json",
+    "example": "npm run build:js; node examples/example.js examples/example.fit",
     "test": "node_modules/gulp/bin/gulp.js;",
-    "build": "node_modules/gulp/bin/gulp.js babel"
+    "build-o": "node_modules/gulp/bin/gulp.js"
   },
   "version": "1.6.15",
   "dependencies": {
