--- a/package.json
+++ b/package.json
@@ -66,7 +66,7 @@
     "type-check": "tsc --noEmit",
     "type-check:watch": "npm run type-check -- --watch",
     "example-output": "npm run build:js; node examples/example.js examples/example.fit > examples/output.json",
-    "example": "npm run build:js; node examples/example.js examples/example.fit",
+    "example": "npm run build; node examples/example.js examples/example.fit",
     "test": "node_modules/gulp/bin/gulp.js;",
     "build-o": "node_modules/gulp/bin/gulp.js"
   },
