Rewriting the decoder (parse()) routines.
Working on a bidirectional encode/decode system.  Making the decode
phase use the same defines as the encoder will make 1:1 parity possible
for decoding and encoding.  E.g my goal is lossless decode -> IR ->
encode.

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -10,7 +10,7 @@
         "SharedArrayBuffer": "readonly"
     },
     "parserOptions": {
-        "ecmaVersion": 2018,
+        "ecmaVersion": 2020,
         "sourceType": "module"
     },
     "rules": {
@@ -21,6 +21,13 @@
         "semi": [
             "error",
             "always"
+        ],
+        "no-debugger": "off",
+        "no-unused-vars": [
+            "error",
+            {
+                "args": "none"
+            }
         ]
     }
 }
